# zahinabdullah

./: CNAME  index.html  index.js  package-lock.json  package.json  styles.css  vite.config.js
assets/: index-CuQxU6Cs.js  index-DYGMRR52.js
backend/: app.py  pyproject.toml
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/layouts/: Footer.jsx  Header.jsx
frontend/src/components/sections/: Contact.jsx  Experiences.jsx  Hero.jsx  Projects.jsx  Skills.jsx
frontend/src/services/: api.js
public/: 404.html
src/: App.jsx  main.jsx
